# fastapi_auth

./: .gitignore  README.md  package-lock.json
backend/: .gitignore  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/controllers/auth/: __init__.py  __inti__.py  user.py
backend/app/models/: __init__.py  mixins.py  person.py
backend/app/models/auth/: role.py  user.py  user_role.py
backend/app/repositories/: __init__.py  person.py
backend/app/repositories/auth/: __init__.py  role.py  user.py  user_role.py
backend/app/schemas/: __init__.py
backend/app/schemas/auth/: schemas.py
backend/app/services/auth/: __init__.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 0983324c39b7_initial_migration.py  6e6fe55e614b_initial_migration.py  d34cae0137dc_initial_revision.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
frontend/src/components/: ForgetPassword.js  Home.js  Login.js  Register.js
